--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "files.associations": {
-        "queue": "cpp"
-    }
+  "files.associations": {
+    "queue": "cpp",
+    "iostream": "cpp"
+  }
 }
